--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="index.js"></script>
+    <script defer src="app.js"></script>
   </head>
   <body>
     <div class="container">
@@ -13,6 +13,7 @@
         <h4 class="h4r">
           Boku No hero Academia Quiz
         </h4>
+        <p class="score" id="score">Score : 0</p>
       </div>
       <div id="question-container" class="hide">
         <div id="question">Question</div>
